Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7170

jom: -n option does not print commands prefixed with @

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 2.6.0-rc
    • Qt Creator 2.5.0
    • Jom
    • None

    Description

      Given this makefile:

      first:
              @echo silent command
              echo non-silent command
      

      jom's behavior when run with -n is inconsistent with both nmake and GNU make.

      nmake:

      > nmake -f test-makefile -n
      
      Microsoft (R) Program Maintenance Utility Version 9.00.21022.08
      Copyright (C) Microsoft Corporation.  All rights reserved.
      
              echo silent command
              echo non-silent command
      

      GNU make:

      $ make -f test-makefile -n
      echo silent command
      echo non-silent command
      

      jom:

      >jom -f test-makefile -n  
      
      jom 1.0.11 - empower your cores
      
              echo non-silent command
      
      

      jom omitted the command marked with @.

      Discovered this because qmake seems to always generate the "qmake" target with an @, at least on Windows, meaning that "jom -n qmake" can't be used to output the qmake command used to generate a makefile.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            rmcgover Rohan McGovern (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes