output all commands when run with /n

The /n switch should output all commands, even those prefixed with @.

Task-number: QTCREATORBUG-7170

Change-Id: I90d930276d4ee993ecdfc4528abfb5354b089651
Reviewed-by: Joerg Bornemann <joerg.bornemann@nokia.com>